# corpora

./: .corpora.yaml  .env  .env.example  .gitattributes  .gitignore  .pr_agent.toml  CODEOWNERS  NOTICE  README.md  TODO.md  corpora.spec  docker-compose.yaml  genall.sh
.corpora/: PURPOSE.md  README.md  STRUCTURE.md  VOICE.md
.corpora/md/: DIRECTIONS.md
.corpora/py/: DIRECTIONS.md
.corpora/rs/: DIRECTIONS.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml  entrypoint.sh  setup.sh
.github/: README.md
.github/workflows/: README.md  ci-python.yml  ci-rust.yml  ci-xcompile.yml  pgvector17.yml  pr-agent.yml
docker/: Dockerfile  Dockerfile.app  Dockerfile.celery  Dockerfile.pgvector  Dockerfile.xcompile  README.md
md/: README.md  SETUP.md
md/notes/: celery-tasks.md  corpora-name.md  uploads.md  (+7 more)
py/: README.md  genall.sh  pyproject.toml  pytest.ini  requirements-app.txt  requirements-dev.txt  requirements.txt
rs/: Cargo.toml  README.md  genall.sh  openapitools.json
rs/core/corpora_cli/: Cargo.toml
rs/core/corpora_cli/src/: context.rs  main.rs
rs/core/corpora_cli/src/commands/: chat-tui.rs  chat.rs  corpus.rs  infer.rs  init.rs  mod.rs  plot.rs  sync.rs  workon.rs
rs/core/corpora_cli/src/commands/issue/: create.rs  label.rs  mod.rs  update.rs
rs/core/corpora_cli/src/context/: config.rs  mod.rs
rs/core/corpora_cli/src/context/auth/: client_secret.rs  mod.rs
rs/core/corpora_cli/src/context/collector/: git.rs  mod.rs
rs/core/corpora_cli/src/history/: files.rs  mod.rs
sh/: alias-tree.sh  git-delete-local-branches.sh
(+32 files in other folders)
