[package]
name = "corpora"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
corpora_client = { path = "../corpora_client" }
crossterm = "0.28.1"
dialoguer = "0.11.0"
flate2 = "1.0.35"
git2 = "0.19.0"
indicatif = "0.17.9"
ratatui = "0.29.0"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tar = "0.4.43"
tempfile = "3.14.0"
termimad = "0.31.1"
tui-textarea = "0.7.0"
uuid = "1.11.0"
